--- a/index.ipynb
+++ b/index.ipynb
@@ -240,7 +240,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\".en # False"
+    "\"art.vandelay@vandelay.co\".endsWith('') # False"
    ]
   },
   {
